--- a/homework/HW2_PG_Crime.Rmd
+++ b/homework/HW2_PG_Crime.Rmd
@@ -9,7 +9,7 @@ In this assignment, we will be working with a dataset reporting the number of cr
 You will need to load the tidyverse library
 
 ```{r}
-
+library(tidyverse)
 ```
 
 Then you'll load the data from the web. The URL for the data is: https://raw.githubusercontent.com/dwillis/jour405/refs/heads/main/data/pg_crime_totals_2024.csv. You will create a dataframe called `pg_crime` that contains the data from this URL.
@@ -17,19 +17,20 @@ Then you'll load the data from the web. The URL for the data is: https://raw.git
 ### Task 2: Load the Data and Describe It
 
 ```{r}
+pg_crime <- read_csv("pg_crime_totals_2024.csv")
 ```
 ### Task 3: Describe the Data
 
 You should examine that dataframe carefully by clicking on it in the Environment tab in RStudio. Write a couple of sentences describing the categories of incidents. From a reporting standpoint, are any of the categories more important than others? Why or why not? Do any of them make the job of summarizing the data more difficult? Why or why not?
 
-ANSWER HERE
+Generally, the crimes can either be categorized as petty/misdemeanors (theft and accidents), or violent crimes/felonies (Assaut, robbery, b&e, sex offenses, etc.). While not "more important," I do think that violent crimes are more eye-catching, though I think crimes like theft and accidents would be more relevant to the public. Any crime that has multiple sub-categories (Assault, assault with a weapon, and assault shooting, for example), mkes summarizing. bit more difficult, as you have to factor in multiple datasets.
 
 ### Task 4: Calculating Averages
 
 Calculate the total number of incidents per month for each category using `mutate()`, calling the new column `total_incidents`. Then calculate the average number of incidents per month for each category of crime, calling the new column `average_incidents`. Assign the result to a new dataframe called `pg_crime_averages`.
 
 ```{r}
-
+mutate (pg_crime, total_incidents = sum())
 ```
 
 ### Task 5: Describe the Averages
